DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2004-09-02 allenb       Added expression templates for vectors.
2004-08-30 allenb       Added meta programming for loop unrolling of VecBase
                        assignment.
                        Added meta programs for VecOps: lenSqr, equal, dot
2004-08-19 allenb       Added fast inverse square root.
2004-08-03 allenb       Refactored seg/tri intersection test to remove two
                        un-needed divisions.
2004-07-21 allenb       Refactored code for seg/line intersect with plane
                        to better handle border cases.
                        Added overloaded calls for Math::abs that call the
                        system method for float, double, long, and int.
[0.3.5 released - 7.12.2004]===================================================
2004-07-12 patrickh     Filled in critical missing functions in PyGMTL.

[0.3.3 released - 4.24.2004]===================================================
2004-02-13 allenb       Updated license with an addendum to explicitly allow
                        static linking of template code.
2003-09-23 nonchocoboy  added Vec accessors for matrix rows and columns.
2003-09-07 subatomic    added new intersectVolume for sphere/linetype
                        this is separate from intersect, which only 
                        intersects with the surface of the sphere.
2003-05-15 subatomic    added lineseg/plane version of intersect. 
                        fixed ray/plane version of intersect
2003-05-13 subatomic    added reflect() for point about a plane
2003-05-09 subatomic    added Matrix xform, *, and *=  for lineseg and ray
2003-04-25 subatomic    changed makeInverse(mat) to makeInverse for consistency
                        NEW VERSION 0.3.1
2003-04-18 patrickh     Renamed the vector version of gmtl::cross() that